fixed TableAccess get by id